--- a/beverageMenu.html
+++ b/beverageMenu.html
@@ -4,7 +4,6 @@
     <link rel="stylesheet" href="style.css">
     <script src="Templates/header.js"></script>
     <script src="Templates/footer.js"></script>
-    <script src="App.js"></script>
 
     <link rel="shortcut icon" href="Images/vegetable_icon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -20,7 +19,92 @@
     </nav>
 </head>
 <body>
-    <main-header></main-header>
+    <header>
+        <div class="header">
+            <div class="headerbar">
+                <div class="account">
+                    <ul>
+                        <a href="">
+                            <li>
+                                <i class="fa-solid fa-house-chimney"></i>
+                            </li>
+                        </a>
+                        <a href="index.html">
+                            <li>
+                                <i class="fa-solid fa-magnifying-glass searchicon" id="searchicon1"></i>
+                            </li>
+                        </a>
+                        <div class="search" id="searchinput1">
+                            <input type="search">
+                            <i class="fa-solid fa-magnifying-glass srchicon"></i>
+                        </div>
+                        <a href="">
+                            <li>
+                                <i class="fa-solid fa-user" id="user-mb"></i>
+                            </li>
+                        </a>
+                    </ul>
+                </div>
+                <div class="nav">
+                    <ul>
+                        <a href="index.html">
+                            <li>Home</li>
+                        </a>
+                        <a href="aboutUs.html">
+                            <li>About</li>
+                        </a>
+                        <a href="index.html#anchor-image">
+                            <li>Food Menu</li>
+                        </a>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="logo">
+                <img src="Images/honeybee.png" alt="Vegetarian Food">
+            </div>
+            <div class="bar">
+                <i class="fa-solid fa-bars"></i>
+                <i class="fa-solid fa-xmark" id="hdcross"></i>
+            </div>
+            <div class="nav">
+                <ul>
+                    <a href="index.html">
+                        <li>Home</li>
+                    </a>
+                    <a href="aboutUs.html">
+                        <li>About</li>
+                    </a>
+                    <a href="index.html#anchor-image">
+                        <li>Food Menu</li>
+                    </a>
+                </ul>
+            </div>
+            <div class="account">
+                <ul>
+                    <a href="index.html">
+                        <li>
+                            <i class="fa-solid fa-house-chimney"></i>
+                        </li>
+                    </a>
+                    <a href="#">
+                        <li>
+                            <i class="fa-solid fa-magnifying-glass searchicon" id="searchicon2"></i>
+                        </li>
+                    </a>
+                    <div class="search" id="searchinput2">
+                        <input type="search">
+                        <i class="fa-solid fa-magnifying-glass srchicon"></i>
+                    </div>
+                    <a href="#">
+                        <li>
+                            <i class="fa-solid fa-user" id="user-lap"></i>
+                        </li>
+                    </a>
+                </ul>
+            </div>
+        </div>
+    </header>
     <div class="beverages-main">
         <div class="beverages">
             <div class="item2">
@@ -70,5 +154,6 @@
     </div>
     </div>
     <main-footer></main-footer>
+    <script src="App.js"></script>
 </body>
 </html>
