--- a/breakfestMenu.html
+++ b/breakfestMenu.html
@@ -11,10 +11,11 @@
 
     <script src="Templates/footer.js"></script>
     <script src="Templates/header.js"></script>
-    <script src="MainApp/App.js"></script>
 
     <link rel="stylesheet" href="style.css">
     <title>Breakfast Menu</title>
+
+    
 </head>
 <body>
     <main-header></main-header>
@@ -59,5 +60,6 @@
         </div>
         </div>
         <main-footer></main-footer>
+    <script src="App.js"></script>
 </body>
 </html>
