--- a/dinnerMenu.html
+++ b/dinnerMenu.html
@@ -11,12 +11,17 @@
 
     <script src="Templates/footer.js"></script>
     <script src="Templates/header.js"></script>
-    <script src="App.js"></script>
     <script src="index.html"></script>
 
     <link rel="stylesheet" href="style.css">
+
+
+    <nav>
+        <ul>
+            <li><a href="index.html"></a></li>
+        </ul>
+    </nav>
 </head>
-<body>
     <main-header></main-header>
     <div class="dinner-main">
         <div class="dinner">
@@ -67,5 +72,6 @@
         </div>
         </div>
         <main-footer></main-footer>
+    <script src="App.js"></script>
 </body>
 </html>
