--- a/beverageMenu.html
+++ b/beverageMenu.html
@@ -112,6 +112,7 @@
                     <img src="Images/falsaBerryDrink.jpg" alt="">
                 </div>
                 <h3>Falsa Berry</h3>
+                <p>A refreshing, tangy berry drink with a sweet and tart balance.</p>
                 <p class="price">$2.99</p>
             </div>
             <div class="item2">
@@ -119,6 +120,7 @@
                     <img src="Images/kiwiDrink.jpg" alt="">
                 </div>
                 <h3>Blueberry with Lime and Mint Leaves</h3>
+                <p>A vibrant blueberry-infused drink with zesty lime and fresh mint.</p>
                 <p class="price">$2.99</p>
             </div>
             <div class="item2">
@@ -126,6 +128,7 @@
                     <img src="Images/pexels-giorgi-iremadze-2450631-6597063.jpg" alt="">
                 </div>
                 <h3>Kiwi Drink</h3>
+                <p>A nutritious green drink made with fresh kiwi and herbs for a revitalizing taste.</p>
                 <p class="price">$2.99</p>
             </div>
             <div class="item2">
@@ -133,6 +136,7 @@
                     <img src="Images/orangeJuice_Peachesontop.jpg" alt="">
                 </div>
                 <h3>Orange Juice with Peaches on top</h3>
+                <p>Classic orange juice with the added sweetness of peaches.</p>
                 <p class="price">$2.99</p>
             </div>
             <div class="item2">
@@ -140,6 +144,7 @@
                     <img src="Images/berriesWithMintleaves.jpg" alt="">
                 </div>
                 <h3>Berries with Mint Leaves</h3>
+                <p>A berry-packed drink with a refreshing minty twist.</p>
                 <p class="price">$2.99</p>
             </div>
             <div class="item">
@@ -147,6 +152,7 @@
                     <img src="Images/strbrry-Drink.jpg" alt="">
                 </div>
                 <h3>Strawberry Smoothie</h3>
+                <p> A creamy and fruity strawberry delight blended to perfection.</p>
                 <p class="price">$2.99</p>
             </div>
         </div>
