--- a/dinnerMenu.html
+++ b/dinnerMenu.html
@@ -30,6 +30,7 @@
                     <img src="Images/plateOne.jpg" alt="">
                 </div>
                 <h3>Organic Salad Bowl</h3>
+                <p>A fresh, wholesome mix of greens, vegetables, and protein-packed toppings.</p>
                 <p class="price">$10.99</p>
             </div>
             <div class="item">
@@ -37,6 +38,7 @@
                     <img src="Images/plateTwo.jpg" alt="">
                 </div>
                 <h3>Salad</h3>
+                <p>A light and refreshing bowl of crisp greens, nuts, and savory toppings.</p>
                 <p class="price">$8.90</p>
             </div>
             <div class="item">
@@ -44,6 +46,7 @@
                     <img src="Images/menu_itemThree.jpg" alt="">
                 </div>
                 <h3>Healthy Rice Bowl</h3>
+                <p>A nutritious blend of grains, beans, and flavorful spices</p>
                 <p class="price">$10.99</p>
             </div>
             <div class="item">
@@ -51,6 +54,7 @@
                     <img src="Images/menu_itemTwo.jpg" alt="">
                 </div>
                 <h3>Organic Nachos</h3>
+                <p>Crispy tortilla chips topped with fresh veggies and creamy dips</p>
                 <p class="price">$10.99</p>
             </div>
             <div class="item">
@@ -58,6 +62,7 @@
                     <img src="Images/menu_itemOne.jpg" alt="">
                 </div>
                 <h3>Vegetable Tostada</h3>
+                <p>A crunchy tostada layered with avocado, tomatoes, and corn.</p>
                 <p class="price">$6.90</p>
             </div>
             <div class="item">
@@ -65,6 +70,7 @@
                     <img src="Images/exoticSalad.jpg" alt="">
                 </div>
                 <h3>Exotic Salad</h3>
+                <p>A bold mix of greens, fruits, and gourmet ingredients for a unique taste.</p>
                 <p class="price">$10.99</p>
             </div>
             </div>
