--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
                     </a>
                 </ul>
             </div>
+            <!--<div class="Take_In_Out_Container">
+                <button id="dine_in" class="Take_In_Out">Dine In</button>
+                <button id="take_out" class="Take_In_Out">Take Out</button>
+            </div>
+        -->
             <div class="account">
                 <ul>
                     <a href="index.html">
@@ -188,7 +193,7 @@
                         <img src="Images/Hummushdish.jpg" alt="">
                     </div>
                     <h3>Hummus with Crackers</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                    <p>Creamy hummus served with crisp, golden crackers.</p>
                     <p class="fav-price">$8.99</p>
                 </div>
                 <div class="item">
@@ -196,7 +201,7 @@
                         <img src="Images/plateOne.jpg" alt="">
                     </div>
                     <h3>Organic Salad Bowl</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                    <p>A fresh, wholesome mix of greens, vegetables, and protein-packed toppings.</p>
                     <p class="fav-price">$10.99</p>
                 </div>
                 <div class="item2">
@@ -204,7 +209,7 @@
                         <img src="Images/falsaBerryDrink.jpg" alt="">
                     </div>
                     <h3>Falsa Berry</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, voluptatibus! Doloremque, ad.</p>
+                    <p>A refreshing, tangy berry drink with a sweet and tart balance.</p>
                     <p class="fav-price">$2.99</p>
                 </div>
             </div>
