--- a/breakfestMenu.html
+++ b/breakfestMenu.html
@@ -26,6 +26,7 @@
                     <img src="Images/Hummushdish.jpg" alt="">
                 </div>
                 <h3>Hummus with Crackers</h3>
+                <p>Creamy hummus served with crisp, golden crackers.</p>
                 <p class="price">$8.99</p>
             </div>
             <div class="item2">
@@ -33,6 +34,7 @@
                     <img src="Images/avocadoToast.jpg" alt="">
                 </div>
                 <h3>Avocado Toast</h3>
+                <p>Fresh avocado mashed on toasted bread with flavorful toppings.</p>
                 <p class="price">$6.90</p>
             </div>
             <div class="item2">
@@ -40,6 +42,7 @@
                     <img src="Images/-bowl-of-oatmeal.jpg" alt="">
                 </div>
                 <h3>Oatmeal</h3>
+                <p> Warm, hearty oats topped with fruits and nuts for a nutritious start.</p>
                 <p class="price">$7.90</p>
             </div>
             <div class="item">
@@ -47,6 +50,7 @@
                     <img src="Images/Acaibowl.jpg" alt="">
                 </div>
                 <h3>Acai Bowl</h3>
+                <p>A vibrant smoothie bowl packed with berries, granola, and fresh toppings.</p>
                 <p class="price">$7.90</p>
             </div>
             <div class="item2">
@@ -54,6 +58,7 @@
                     <img src="Images/slicedKiwi.jpg" alt="">
                 </div>
                 <h3>Sliced Kiwi with Cashew Nuts</h3>
+                <p> A refreshing mix of sliced kiwi and crunchy cashew nuts.</p>
                 <p class="price">$7.90</p>
             </div>
             <div class="dsgn"></div>
