--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="home">
         <div class="main_slide">
             <div>
-                <h1>Enjoy <span>Delicious Food</span> in Your Healthy Life.</h1>
+                <h1>Enjoy <span>Delicious Vegetarian Food</span> in Your Healthy Life.</h1>
                 <p>Experience the perfect blend of flavors and ambiance. Start your journey into a world of culinary delights with our expertly crafted dishes, made to satisfy every craving.</p>    
                 <a href="index.html#anchor-image">
                     <button class="red_btn">Visit Now <i class="fa-solid fa-arrow-right-long"></i></button>
@@ -158,8 +158,9 @@
                         <img src="Images/plateTwo.jpg" alt="">
                     </div>
                     <div>
-                        <h4>Choose your favorite</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis numquam vel officiis.</p>
+                        <h4>Salad</h4>
+                        <h5>User: @Goku</h5>
+                        <p>I came in just wanting a quick meal, but this salad was so good I started questioning all my life choices—why haven’t I been eating this every day?</p>
                     </div>
                 </div>
                 <div class="q_ans">
@@ -167,8 +168,9 @@
                         <img src="Images/Acaibowl.jpg" alt="">
                     </div>
                     <div>
-                        <h4>Choose your favorite</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis numquam vel officiis.</p>
+                        <h4>Acai Bowl</h4>
+                        <h5>User: @BerryObsessed</h5>
+                        <p>Smooth, fruity, and just the right amount of sweetness—definitely my go-to for a quick and delicious pick-me-up!</p>
                     </div>
                 </div>
                 <div class="q_ans">
@@ -176,8 +178,9 @@
                         <img src="Images/exoticSalad.jpg" alt="">
                     </div>
                     <div>
-                        <h4>Choose your favorite</h4>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis numquam vel officiis.</p>
+                        <h4>Exotic Salad</h4>
+                        <h5>User: @GourmetBites23</h5>
+                        <p>The exotic salad is a perfect blend of fresh ingredients and bold flavors—every bite feels like a refreshing, healthy escape.</p>
                     </div>
                 </div>
             </div>
