--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="Images/vegetable_icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     
     
     <meta charset="UTF-8">
@@ -36,6 +36,15 @@
                             </li>
                         </a>
                     </ul>
+                    <div class="calendar">
+                        <ul>
+                            <li>
+                                <a href="#">
+                                    <i class="fas fa-calendar-alt"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="nav">
                     <ul>
